feat: manage passwords and cabinet sessions
